fix: Исправил ошибки в тестах postman